// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Menu.Item render with borderless props 1`] = `
<DocumentFragment>
  .cache-5zd53x-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  color: #464959;
  background: none;
}

.cache-5zd53x-StyledItem svg {
  fill: #464959;
}

.cache-5zd53x-StyledItem:hover,
.cache-5zd53x-StyledItem:focus {
  color: #222638;
}

.cache-5zd53x-StyledItem:hover svg,
.cache-5zd53x-StyledItem:focus svg {
  fill: #222638;
}

<button
    class="cache-5zd53x-StyledItem e10f690h1"
    role="menuitem"
    type="button"
  >
    Borderless Props
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with default props 1`] = `
<DocumentFragment>
  .cache-1m9t97s-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  color: #464959;
  background: none;
}

.cache-1m9t97s-StyledItem svg {
  fill: #464959;
}

.cache-1m9t97s-StyledItem:hover,
.cache-1m9t97s-StyledItem:focus {
  color: #222638;
}

.cache-1m9t97s-StyledItem:hover svg,
.cache-1m9t97s-StyledItem:focus svg {
  fill: #222638;
}

<button
    class="cache-1m9t97s-StyledItem e10f690h1"
    role="menuitem"
    type="button"
  >
    Default Props
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with disabled props 1`] = `
<DocumentFragment>
  .cache-mgnrz8-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  color: #b5b7bd;
  cursor: not-allowed;
  background: none;
}

.cache-mgnrz8-StyledItem svg {
  fill: #b5b7bd;
}

<button
    class="cache-mgnrz8-StyledItem e10f690h1"
    disabled=""
    role="menuitem"
    type="button"
  >
    Disabled Props
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with sentiment danger 1`] = `
<DocumentFragment>
  .cache-dqqg0e-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  color: #ac2740;
  background: none;
}

.cache-dqqg0e-StyledItem svg {
  fill: #ac2740;
}

.cache-dqqg0e-StyledItem:hover,
.cache-dqqg0e-StyledItem:focus {
  color: #8c2034;
}

.cache-dqqg0e-StyledItem:hover svg,
.cache-dqqg0e-StyledItem:focus svg {
  fill: #8c2034;
}

<button
    class="cache-dqqg0e-StyledItem e10f690h1"
    role="menuitem"
    type="button"
  >
    Danger
  </button>
</DocumentFragment>
`;

exports[`Menu placement renders "bottom" 1`] = `
<DocumentFragment>
  <button
    aria-controls="bottom"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`Menu placement renders "bottom-end" 1`] = `
<DocumentFragment>
  <button
    aria-controls="bottom-end"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`Menu placement renders "bottom-start" 1`] = `
<DocumentFragment>
  <button
    aria-controls="bottom-start"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`Menu placement renders "top" 1`] = `
<DocumentFragment>
  <button
    aria-controls="top"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`Menu placement renders "top-end" 1`] = `
<DocumentFragment>
  <button
    aria-controls="top-end"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`Menu placement renders "top-start" 1`] = `
<DocumentFragment>
  <button
    aria-controls="top-start"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`Menu renders with Menu.Item 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-1ibieyd-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #464959;
  box-shadow: 0px 4px 24px 6px #D9DADD66;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #464959;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D9DADD66;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: transparent;
}

.cache-1m9t97s-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  color: #464959;
  background: none;
}

.cache-1m9t97s-StyledItem svg {
  fill: #464959;
}

.cache-1m9t97s-StyledItem:hover,
.cache-1m9t97s-StyledItem:focus {
  color: #222638;
}

.cache-1m9t97s-StyledItem:hover svg,
.cache-1m9t97s-StyledItem:focus svg {
  fill: #222638;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-1ibieyd-StyledPopover e1hqs9p51"
      data-dialog="true"
      id="menu"
      role="dialog"
      style="position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <div
        class="cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom e1hqs9p50"
        role="menu"
      >
        <button
          class="cache-1m9t97s-StyledItem e10f690h1"
          role="menuitem"
          type="button"
        >
          Menu.Item
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.ItemLink & Menu.Item disabled 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu-1"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-1ibieyd-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #464959;
  box-shadow: 0px 4px 24px 6px #D9DADD66;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #464959;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D9DADD66;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: transparent;
}

.cache-mgnrz8-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  color: #b5b7bd;
  cursor: not-allowed;
  background: none;
}

.cache-mgnrz8-StyledItem svg {
  fill: #b5b7bd;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-1ibieyd-StyledPopover e1hqs9p51"
      data-dialog="true"
      id="menu-1"
      role="dialog"
      style="position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <div
        class="cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom e1hqs9p50"
        role="menu"
      >
        <button
          class="cache-mgnrz8-StyledItem e10f690h1"
          disabled=""
          role="menuitem"
          type="button"
        >
          Menu.Item disabled
        </button>
        <button
          class="cache-mgnrz8-StyledItem e10f690h1"
          disabled=""
          role="menuitem"
          type="button"
        >
          Menu.Item Link disabled
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.ItemLink 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu-1"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-1ibieyd-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #464959;
  box-shadow: 0px 4px 24px 6px #D9DADD66;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #464959;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D9DADD66;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: transparent;
}

.cache-q3qrrl-StyledLinkItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  color: #464959;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-q3qrrl-StyledLinkItem svg {
  fill: #464959;
}

.cache-q3qrrl-StyledLinkItem:hover,
.cache-q3qrrl-StyledLinkItem:focus {
  color: #222638;
}

.cache-q3qrrl-StyledLinkItem:hover svg,
.cache-q3qrrl-StyledLinkItem:focus svg {
  fill: #222638;
}

.cache-q3qrrl-StyledLinkItem:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-1ibieyd-StyledPopover e1hqs9p51"
      data-dialog="true"
      id="menu-1"
      role="dialog"
      style="position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <div
        class="cache-1scjmt9-MenuList-centerStyles-bottomStyles-bottom e1hqs9p50"
        role="menu"
      >
        <a
          class="cache-q3qrrl-StyledLinkItem e10f690h0"
          href="/link"
          role="menuitem"
        >
          Menu.Item as Link
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with disclosure not a function 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu"
    aria-expanded="false"
    aria-haspopup="dialog"
    type="button"
  >
    Menu is visible
  </button>
  .cache-1ibieyd-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #464959;
  box-shadow: 0px 4px 24px 6px #D9DADD66;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-1ibieyd-StyledPopover e1hqs9p51"
      data-dialog="true"
      hidden=""
      id="menu"
      role="dialog"
      style="display: none; position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Menu renders with visible=false 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu"
    aria-expanded="false"
    aria-haspopup="dialog"
    type="button"
  >
    Menu is visible
  </button>
  .cache-1ibieyd-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #464959;
  box-shadow: 0px 4px 24px 6px #D9DADD66;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-1ibieyd-StyledPopover e1hqs9p51"
      data-dialog="true"
      hidden=""
      id="menu"
      role="dialog"
      style="display: none; position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;
